k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kaloora
  labels:
    name: kaloora
