k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kaloora-ingress
  namespace: kaloora
  annotations:
    checkov.io/skip1: CKV_K8S_153=Healthz snippet used for ALB health check
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /healthz {
        access_log off;
        default_type text/plain;
        return 200 "OK";
      }
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5001
          - path: /api/diary
            pathType: Prefix
            backend:
              service:
                name: diary-service
                port:
                  number: 5002
          - path: /api/food
            pathType: Prefix
            backend:
              service:
                name: diary-service
                port:
                  number: 5002
          - path: /api/analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 5003
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: user-service
                port:
                  number: 5001
